fix. overflow

--- a/src/component/PC/Dashboard/MemoModal.scss
+++ b/src/component/PC/Dashboard/MemoModal.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+
+  &.default {
+    overflow: hidden;
+  }
 }
 
 .MemoModal_content {
@@ -16,9 +20,12 @@
 }
 
 .MemoModal_noMemos {
+  width: 100%;
+  height: 100%;
   font-size: 1rem;
   color: #666;
   text-align: center;
+  overflow: hidden;
 }
 
 .memoItem_type {
