--- a/src/component/PC/Memo/MemoContent.scss
+++ b/src/component/PC/Memo/MemoContent.scss
@@ -78,7 +78,7 @@
 .MemoContent_info {
   position: relative;
   width: 100%;
-  height: auto;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
@@ -255,6 +255,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
+  overflow-y: auto;
 }
 
 .MemoContent_note_content_content {
@@ -313,7 +314,8 @@
 .CheckboxList_items {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
+  flex: 1;
 
   box-sizing: border-box;
   padding-right: 0.5rem;
